--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_html: ^0.11.1
   url_launcher: ^5.4.10
   intl: ^0.16.1
+  esys_flutter_share: ^1.0.2
+  flutter_platform_widgets: ^0.32.4
 
 dev_dependencies:
   flutter_test:
